--- a/jiyoung/chap1.mdx
+++ b/jiyoung/chap1.mdx
@@ -1,5 +1,125 @@
 ---
 title: 01장 정리
-date: "2024/03/29"
+date: "2024/04/02"
 description: 리액트 개발을 위해 꼭 알아야 할 자바스크립트
 ---
+
+## 자바스크립트의 동등 비교
+
+### 자바스크립트의 데이터 타입
+
+#### Primitive Data (원시 자료형)
+
+- 가장 기본적인 데이터 타입으로, 값이 메모리에 직접 저장된다.
+
+1. 숫자(Number): 정수와 실수를 포함한 모든 숫자 값
+
+   ```bash
+   let integerNumber = 42;
+   let floatingNumber = 3.14;
+   ```
+
+- C나 Java의 경우, 정수와 실수를 구분하여 int, long, float, double 등과 같은 다양한 숫자 타입이 존재한다. 하지만 자바스크립트는 독특하게 하나의 숫자 타입만 존재한다.
+
+- ECMAScript 표준에 따르면, 숫자 타입의 값은 배정밀도 64비트 부동소수점 형(double-precision 64-bit floating-point format : -(253 -1) 와 253 -1 사이의 숫자값)을 따른다. 즉, 모든 수를 실수를 처리하며 정수만을 표현하기 위한 특별한 데이터 타입(integer type)은 없다.
+
+- 자바스크립트의 숫자 타입은 정수만을 위한 타입이 없고 모든 수를 실수를 처리한다. 정수로 표시된다해도 사실은 실수다. 따라서 정수로 표시되는 수 끼리 나누더라도 실수가 나올 수 있다.
+
+  ```bash
+  console.log(1 === 1.0); // true
+  var result = 4 / 2;
+  console.log(result); // 2
+  result = 3 /2;
+  console.log(result); // 1.5
+  ```
+
+2. 문자열(String): 문자들의 나열로 텍스트를 나타냄. 0개 이상의 16bit 유니코드 문자(UTF-16) 들의 집합으로 대부분의 전세계의 문자를 표현할 수 있다
+
+   ```bash
+   let greeting = "Hello, World!";
+   let name = 'jyp';
+
+   ```
+
+3. 불리언(Boolean): true or false 값을 가짐
+
+   ```bash
+   let isTrue = true;
+   let isFalse = false;
+
+   ```
+
+4. undefined: 변수가 선언되었지만 값이 할당되지 않은 상태를 나타낸다
+
+   ```bash
+   let variableWithoutValue;
+   ```
+
+5. null: 값이 비어있거나 존재하지 않음을 나타냄
+
+   ```bash
+   let emptyValue = null;
+   ```
+
+- 변수가 기억하는 메모리 어드레스의 참조 정보를 제거하는 것을 의미하며 자바스크립트 엔진은 누구도 참조하지 않는 메모리 영역에 대해 가비지 콜렉션을 수행할 것이다.
+
+​
+
+6. 심볼(Symbol): ES6부터 추가된 데이터 타입으로, 고유하고 변경 불가능한 값을 나타냄
+
+   ```bash
+   const uniqueKey = Symbol("unique");
+   const anotherKey = Symbol("unique"); // 서로 다른 고유한 값
+   ```
+
+- 심볼은 주로 이름의 충돌 위험이 없는 유일한 객체의 프로퍼티 키(property key)를 만들기 위해 사용한다
+
+7. Bigint
+
+- BigInt는 정수를 표현하기 위한 내장 객체로, 정수 리터럴 끝에 n을 붙여서 생성한다.
+
+  ```bash
+  const bigInt = 1234567890123456789012345678901234567890n;
+  ```
+
+#### Reference Data (참조형)
+
+- 이 데이터 타입은 값이 직접 메모리에 저장되지 않고, 값이 저장된 메모리 주소를 참조한다.
+- 객체는 데이터와 그 데이터에 관련한 동작(절차, 방법, 기능)을 모두 포함할 수 있는 개념적 존재이다.
+- 자바스크립트는 객체 기반의 스크립트 언어로서 자바스크립트를 이루고 있는 거의 "모든 것”이 객체이다. 원시 타입을 제외한 나머지 값들(배열, 함수, 정규표현식 등)은 모두 객체이다. 또한 객체는 pass-by-reference(참조에 의한 전달) 방식으로 전달된다.
+- 객체(Object): 여러 개의 데이터를 그룹화한 복합적인 데이터 타입
+
+  ```bash
+  let person = {
+      firstName: "p",
+      lastName: "jy",
+      age: 3
+  };
+  ```
+
+- 배열(Array): 순서가 있는 데이터의 집합을 나타냄
+
+  ```bash
+  let numbers = [1, 2, 3, 4, 5];
+  let fruits = ["mango", "banana", "tomato"];
+  ```
+
+- 함수(Function): 재사용 가능한 코드 블록을 나타냄
+
+  ```bash
+  function greet(name) {
+  console.log(`Hello, ${name}!`);
+  }
+  greet("jyp"); // 출력: Hello, jyp!
+  ```
+
+- 날짜(Date): 날짜와 시간 정보를 나타냄
+
+  ```bash
+  let currentDate = new Date();
+  console.log(currentDate); // 현재 날짜와 시간 출력
+  ```
+
+- 데이터 타입은 변수를 다루는 중요한 개념으로, 올바른 데이터 타입을 선택하는 것이 어떻게 보면 기본 중에 기본이라고 할 수 있다.
+
+### 값을 저장하는 방식의 차이
