--- a/jiyoung/chap1.mdx
+++ b/jiyoung/chap1.mdx
@@ -389,3 +389,335 @@ add();
 - innerAdd 함수는 add 함수 내부에서 선언되었기 때문에 add 함수의 렉시컬 환경을 기억하고 있다. 따라서 innerAdd 함수는 add 함수의 변수에 접근할 수 있다.
 - _선언된 어휘적 환경_ 은, 변수가 코드 내부에서 어디에 선언되었는지에 따라 결정된다.
 - 클로저는 이러한 어휘적 환경을 조합해 코딩하는 기법이다.
+
+### 스코프
+
+#### 전역 스코프
+
+- 전역 레벨에 선언한 것
+- 전역 스코프에 선언된 변수는 어디서든 접근 가능하다.
+
+#### 함수 스코프
+
+- 함수 내부에 선언한 것
+  ```bash
+  function hello(){
+    var local = 'local variable';
+    console.log(local); // local variable
+  }
+  hello();
+  console.log(local); // ReferenceError: local is not defined
+  ```
+
+### 클로저의 활용
+
+```bash
+function Counter(){
+  var counter = 0 ;
+  return {
+    increase : function(){
+      return ++counter;
+    },
+    decrease : function(){
+      return --counter;
+    }
+    counter : function(){
+      return counter;
+    },
+  }
+}
+
+const counter = Counter();
+console.log(counter.increase()); // 1
+console.log(counter.increase()); // 2
+console.log(counter.decrease()); // 1
+```
+
+- counter 변수의 업데이트를 increase, decrease로 제한해 무분별하게 변경되는 것을 막았다.
+
+#### 리액트에서의 클로저
+
+```jsx
+function Component() {
+  const [state, setState] = useState();
+  function handleClick() {
+    setState((prev) => prev + 1);
+  }
+  // ...
+}
+```
+
+- 클로저가 useState 내부에서 활용되었다.
+- 외부 함수(useState)가 반환한 내부 함수(setState)는 외부 함수(useState)의 호출이 끝났음에도 자신이 선언된 외부 함수가 선언된 환경을 기억한다.
+
+#### 주의사항
+
+- 클로저는 생성될 때마다 그 선언적 환경을 기억해야 하므로 추가로 비용이 발생한다.
+- 클로저를 남발하면 메모리 누수가 발생할 수 있다.
+  ```bash
+  function heavyJobWithClosure(){
+    const longArr = Array.from({length: 1000000}, (_, i) => i);
+    return function(){
+      console.log(longArr.length);
+    }
+  }
+  const innerFunc = heavyJobWithClosure();
+  Button.addEventListener('click', function(){
+    innerFunc();
+  });
+  ```
+  - heavyJobWithClosure 함수가 실행될 때 생성된 longArr 배열을 메모리에 두고 있다.
+
+## 이벤트 루프와 비동기 통신의 이해
+
+### 싱글 스레드 자바스크립트
+
+- 자바스크립트는 싱글 스레드 언어로, 한 번에 하나의 작업만 처리할 수 있다.
+- 비동기란 어떤 작업이 끝날 때까지 기다리지 않고 다른 작업을 수행하는 것을 의미한다.
+- 자바스크립트는 비동기 처리를 위해 이벤트 루프를 사용한다.
+
+### 이벤트 루프
+
+#### 호출 스택과 이벤트 루프
+
+- 호출 스택 : 자바스크립트에서 수행해야 할 코드나 함수를 순차적으로 담아두는 스택이다.
+
+  ```
+  function bar(){
+    console.log('bar');
+  }
+  function baz(){
+    console.log('baz');
+  }
+  function foo(){
+    console.log('foo');
+    bar();
+    baz();
+  }
+  foo();
+  ```
+
+  - foo 함수가 호출되면 호출 스택에 foo 함수가 쌓이고, bar 함수가 호출되면 호출 스택에 bar 함수가 쌓인다. 이후 baz 함수가 호출되면 호출 스택에 baz 함수가 쌓인다. baz 함수가 실행되면 호출 스택에서 baz 함수가 제거되고, bar 함수가 실행되면 호출 스택에서 bar 함수가 제거된다. 마지막으로 foo 함수가 실행되면 호출 스택에서 foo 함수가 제거된다.
+  - 이벤트 루프 : 이 호출 스택이 비어 있는지 여부를 확인하는 것
+
+  ```bash
+  function bar(){
+    console.log('bar');
+  }
+  function baz(){
+    console.log('baz');
+  }
+  function foo(){
+    console.log('foo');
+    setTimeout(bar(),0)
+    baz();
+  }
+  foo();
+  ```
+
+  - setTimeout 함수는 비동기 함수로, 두 번째 인자로 전달된 시간이 지나면 콜백 함수를 호출한다. 이때, 콜백 함수는 호출 스택이 아닌 태스크 큐에 들어간다.
+  - 태스크 큐 : 실행해야 할 테스크의 집합
+  - 이벤트 루프는 호출 스택이 비어있을 때 태스크 큐에 있는 콜백 함수를 호출 스택으로 옮긴다.
+
+**_자바스크립트 코드 실행은 싱글 스레드에서 이루어지지만 이러한 외부 Web API등은 모두 자바스크립트 코드 외부에서 실행되고 콜백이 태스크 큐로 들어가는 것이다._**
+
+### 태스크 큐와 마이크로 태스크 큐
+
+- 마이크로 태스크 큐 : Promise 객체의 then 메서드나 catch 메서드로 등록한 콜백 함수가 들어가는 큐
+- **마이크로 태스크 큐는 기존 태스크 큐보다 우선순위가 높다.**
+- 렌더링은 마이크로 태스크 큐가 실행되고 난 후에 , 태스크 큐를 실행하기 전에 일어난다.
+- 결론적으로 마이크로 태스크 또한 렌더링에 영향을 미친다.
+
+## 리액트에서 자주 사용하는 리액트 문법
+
+### 구조 분해 할당
+
+- 구조 분해 할당은 객체나 배열을 해체하여 그 값을 개별 변수에 담을 수 있게 하는 자바스크립트 표현식이다.
+
+```
+const array = [1, 2, 3];
+const [a, ...rest] = array;
+console.log(a); // 1
+console.log(rest); // [2, 3]
+```
+
+```
+const object = {
+  a: 1,
+  b: 2,
+  c: 3
+}
+const {a, ...rest} = object;
+console.log(a); // 1
+console.log(rest); // {b: 2, c: 3}
+```
+
+### 전개 구문
+
+- 전개 구문은 배열이나 객체를 확장하거나 병합할 때 사용한다.
+
+```bash
+const array = [1, 2, 3];
+const newArray = [...array, 4, 5];
+console.log(newArray); // [1, 2, 3, 4, 5]
+
+const object = {
+  a: 1,
+  b: 2,
+  c: 3
+}
+const newObject = {...object, d: 4, e: 5};
+console.log(newObject); // {a: 1, b: 2, c: 3, d: 4, e: 5}
+```
+
+### 객체 초기자
+
+- 객체 초기자는 객체를 생성할 때 변수 이름과 동일한 속성을 초기화할 때 사용한다.
+
+```bash
+const a = 1;
+const b = 2;
+const c = 3;
+const object = {a, b, c};
+console.log(object); // {a: 1, b: 2, c: 3}
+```
+
+### Array 프로토타입의 메서드 : map, filter, reduce, forEach
+
+#### map
+
+- map 메서드는 배열 내의 모든 요소에 대해 주어진 함수를 호출한 결과를 모아 새로운 배열을 반환한다.
+- 리액트에서는 주로 특정 배열을 기반으로 어떠한 리액트 요소를 반환하고자 할때 많이 사용된다.
+
+```bash
+const array = [1, 2, 3];
+const Elements = arr.map((item)=>{return <div>{item}</div>});
+```
+
+#### filter
+
+- filter 메서드는 주어진 함수의 테스트를 통과하는 모든 요소를 모아 새로운 배열로 반환한다.
+
+#### reduce
+
+- reduce 메서드는 배열의 각 요소에 대해 주어진 리듀서 함수를 실행하고, 하나의 결과값을 반환한다.
+
+```bash
+const array = [1, 2, 3];
+const sum = array.reduce((acc, cur) => acc + cur, 0);
+console.log(sum); // 6
+```
+
+#### forEach
+
+- forEach 메서드는 배열의 각 요소에 대해 주어진 함수를 실행한다.
+- 리턴값이 없고, 배열 순회를 멈출 수 없다.
+
+### 삼항 조건 연산자
+
+- 삼항 조건 연산자는 조건에 따라 값을 반환하는 연산자이다.
+- 리액트에서는 주로 조건부 렌더링을 할 때 많이 사용된다.
+
+```bash
+function Component({condition}){
+  return (
+    <div>
+      {condition ? <div>참</div> : <div>거짓</div>}
+    </div>
+  )
+}
+```
+
+- 중첩은 피하는 것이 좋다.
+
+## 타입스크립트
+
+### 타입스크립트란
+
+- 자바스크립트에 타입을 부여한 언어
+- 런타임이 아닌 빌드 타임에 수행할 수 있게 해준다.
+
+### 리액트를 효과적으로 작성하기 위한 타입스크립트 활용법
+
+#### any 대신 unknown 사용하기
+
+- any는 모든 타입을 허용하는 타입이다. 하지만 unknown은 모든 타입을 허용하지만, 타입을 정의하지 않은 상태에서는 사용할 수 없다.
+
+```bash
+function doSomething(callback: unknown){
+  if(typeof callback === 'function'){
+    callback();
+    return;
+  }
+
+  throw new Error('callback is not a function');
+}
+```
+
+- never 타입은 절대 발생하지 않는 값의 타입을 나타낸다.
+
+#### 타입 가드 적극 활용하기
+
+- 조건문과 함께 타입 가드를 사용하면 타입을 효과적으로 좁힐 수 있다.
+- `instance of` : 객체가 특정 클래스의 인스턴스인지 확인하는 연산자
+  ```bash
+  function doSomething(value: string | number){
+    if(value instanceof String){
+      console.log(value.toUpperCase());
+    }else{
+      console.log(value.toFixed());
+    }
+  }
+  ```
+- typeof 연산자 : 변수의 타입을 확인하는 연산자
+  ```bash
+  function doSomething(value: string | number){
+    if(typeof value === 'string'){
+      console.log(value.toUpperCase());
+    }else{
+      console.log(value.toFixed());
+    }
+  }
+  ```
+- in 연산자 : 객체의 속성이 존재하는지 확인하는 연산자
+  ```bash
+  interface Student{
+    age: number;
+    score: number;
+  }
+  interface Teacher{
+    name: string;
+  }
+  function doSomething(value: Student | Teacher){
+    if('age' in value){
+      console.log(value.age); // Student 타입
+    }else{
+      console.log(value.name); // Teacher 타입
+    }
+  }
+  ```
+
+#### 제네릭
+
+- 제네릭은 타입을 파라미터로 전달하는 방법이다.
+- 함수나 클래스를 정의할 때 타입을 명시하지 않고, 타입을 파라미터로 받아 사용할 수 있다.
+  ```
+  function Component(){
+    const [state, setState] = useState<string>(''); // useState의 제네릭 타입으로 string을 전달
+  }
+  ```
+
+#### 인덱스 시그니처
+
+- 인덱스 시그니처는 객체의 인덱스에 대한 타입을 정의하는 방법이다.
+- 객체의 키와 값의 타입을 정의할 수 있다.
+  ```
+  interface Student{
+    [key: string]: string;
+  }
+  const student: Student = {
+    name: 'jyp',
+    age: '3',
+  }
+  ```
+- 인덱스 시그니처는 객체의 키와 값의 타입을 정의할 수 있으므로, 동적인 키와 값의 타입을 가진 객체를 정의할 때 유용하다.
