리액트 개발을 위해 꼭 알아야 할 자바스크립트

--- a/minhyung/chap1.mdx
+++ b/minhyung/chap1.mdx
@@ -1,15 +1,244 @@
 ---
 title: 01장 정리
-date: "2024/03/29"
+date: "2024/04/04"
 description: 리액트 개발을 위해 꼭 알아야 할 자바스크립트
 ---
 
-markdown 형식을 지켜서 여기에 작성해주시면 됩니다.
+## 자바스크립트의 동등 비교
+
+1. 자바스크립트의 데이터 타입
+
+- 원시 타입
+  - boolean
+  - null
+  - undefined
+  - number
+  - string
+  - symbol
+  - bigint
+- 객체 타입
+  - object
+
+2. 값을 저장하는 방식의 차이
+
+- 원시 타입은 **불변** 형태의 값으로 저장되며 복사할 때 값을 전달한다.
+- 객체 타입은 변경 가능한 형태로 저장되며 복사할 때 값이 아닌 **참조**를 전달한다.
+
+3. 자바스크립트의 또 따른 비교 공식, Object.is
+
+- == 나 ===가 만족하지 못하는 몇 가지 특이한 케이스를 추가하기 위해 도입된 공식이다.
+
+4. 리액트에서의 동등 비교
+
+- 각 객체를 비교해 동등성을 검증한다.
+- 객체 간 얕은 비교(객체의 첫 번째 깊이에 존재하는 값만 비교)
+
+## 함수
+
+1. 함수란 무엇인가?
+
+- 작업을 수행하거나 값을 계싼하는 등의 과정을 표현하고, 이를 하나의 블록으로 감싸서 실행 단위로 만들어 놓은 것을 의미한다.
+
+2. 함수를 정의하는 4가지 방법
+
+- 함수 선언문
+- 함수 표현식
+- Function 생성자
+- 화살표 함수
+- 화살표 함수와 함수 선언문 간의 차이점을 숙지하고 적절하게 사용하는 것이 중요하다.
+
+3. 다양한 함수 살펴보기
+
+- 즉시 실행 함수
+- 고차 함수
+
+4. 함수를 만들 때 주의해야 할 사항
+
+- 함수의 부수 효과를 최대한 억제하라, 순수함수 형태로 만들면 좋다.
+- 가능한 한 함수를 작게 만들어라
+- 누구나 이해할 수 있는 함수 및 변수 네이밍을 하는것이 좋다.
+
+### 클래스
+
+1. 클래스란 무엇인가?
+
+- 특정한 형태의 객체를 반복적으로 만들기 위해 사용되는 것
+- 내부의 특징
+  - constructor
+  - 프로퍼티
+  - getter와 setter
+  - 인스턴스 메서드
+  - 정적 메서드
+  - 상속
+
+2. 클래스와 함수의 관계
+
+- 클래스는 ES6에서 나온 개념
+- ES6 이전에는 프로토타입을 활용해 클래스의 작동방식을 동일하게 구현
+- 클래스가 작동하는 방식은 자바스크립트의 프로토타입을 활용하는 것
+- 클래스 작동을 **생성자 함수**로 매우 유사하게 재현할 수 있다.
+- 클래스는 객체지향 언어를 사용하던 다른 프로그래머가 좀 더 자바스크립트에 접근하기 쉽게 만들어주는, 일종의 **문법적 설탕**의 역할
+
+### 클로저
+
+1. 클로저의 정의
+
+- 함수와 함수가 선언된 어휘적 환경의 조합
+
+2. 변수의 유효 범위, 스코프
+
+- 전역 스코프
+- 함수 스코프
+- 블록 스코프
+
+3. 클로저의 활용
+
+- 클로저의 활용
+  - 사용자가 특정 변수를 직점 수정하는 것을 막을 수 있음
+  - 특정 변수의 업데이트를 특정 함수에서만 수행하도록 함으로써 무분별하게 변경되는 것을 방지
+- 리액트에서의 클로저
+  - useState
+  - setState를 통해 state를 업데이트 할 수 있는 이유: 외부 함수(useState)가 반환한 내부 함수(setState)는 외부 함수(useState)의 호출이 끝났음에도 자신이 선언된 외부 함수가 선언된 환경을 기억하기 때문에 계속 state 값을 사용할 수 있다.
+
+4. 주의할 점
+
+- 클로저는 함수의 선언적인 환경을 기억하고 있어야 하므로 데이터를 저장하기 때문에 메모리로 인한 성능 문제를 야기시킬 수 있다.
+- 클로저는 공짜가 아니므로 클로저를 사용할 때는 주의가 필요하다
+
+### 이벤트 루프와 비동기 통신의 이해
+
+1. 싱글 스레드와 자바스크립트
+
+- 자바스크립트는 싱글 스레드 언어
+- 싱글 스레드 언어이지만 이벤트 루프 및 다양한 자원을 통해 비동기 통신이 가능하다.
+
+2. 이벤트 루프란?
+
+- 자바스크립트 런타임 외부에서 자바스크립트의 비동기 실행을 돕기 위해 만들어진 장치
+- 호출 스택과 이벤트 루프
+
+3. 태스크 큐와 마이크로 태스크 큐
+
+- 우선 순위 : 마이크로 태스크 큐 > 매크로 태스크 큐
+- 큐에 들어가는 작업
+  - 매크로 태스크 큐: setTimeout, setInterval, setImmediate
+  - 마이크로 태스크 큐: process, nextTick, Promises, queueMicroTask, MutationObserver
+
+### 리액트에서 자주 사용하는 자바스크립트 문법
+
+1. 구조 분해 할당
+
+- 배열 구조 분해 할당
 
 ```
-export function myComponent(){
-    return (
-        <p>code space</p>
-    )
-}
+const array = [1, 2, 3, 4, 5]
+const [a, b, c, ...d] = array
+
+a => 1
+b => 2
+c => 3
+d => [4, 5]
 ```
+
+- 객체 구조 분해 할당
+
+```
+const obj = {a:1, b:2, c:3, d:4, e:5}
+
+a => 1
+b => 2
+c => 3
+drestObject => {d:4, e:5}
+```
+
+- 객체 구조 분해 구문이 트랜스 파일링이되면 상대적으로 번들링이 커지기 때문에 사용할 떄 주의가 필요하다.
+- 대안으로 lodash의 omit, rambda의 omit을 사용한다.
+
+2. 전개 구문
+
+- 배열 전개 구문
+
+```
+const array = [1, 2, 3]
+const array2 = [...array, 4, 5] => [1, 2, 3, 4, 5]
+```
+
+- 객체 전개 구문
+
+```
+const obj = {a:1, b:2, c:3}
+const obj2 = {...obj, d:4, e:5} => {a:1, b:2, c:3, d:4, e:5}
+```
+
+3. 객체 초기자
+
+- 객체를 선언할 때 객체의 넣고자 하는 키와 값을 가지고 있는 변수가 이미 존재한다면 해당 값을 간결하게 넣어줄 수 있는 방식
+
+```
+const a = 1
+const b = 2
+
+const obj = {
+    a,
+    b
+}
+
+obj => {a: 1, b: 2}
+```
+
+4. Array 프로토타입의 메서드: map, filter, reduce, forEach
+
+- 해당 메서드(forEach 제외) 들은 기존 배열의 값을 건드리지 않고 새로운 값을 만들어 내기 때문에 변경될 염려 없이 안전하게 사용할 수 있다.
+- map
+  - 인수로 전달받은 배열과 똑같은 길이의 새로운 배열을 반환하는 메서드
+  - 배열의 각 아이템을 순회하면서 각 아이템을 콜백으로 연산한 결과를 구성된 새로운 배열을 만들 수 있다.
+- filter
+  - 배열의 각 아이템을 순회하면서 truthy 조건을 만족하는 경우에만 해당 아이템을 반환(필터링)
+- reduce
+  - map, filter 메소드와 달리 추가로 초기값 인수를 받는다.
+  - 초기값에 따라 배열, 객체, 또는 그 외으이 다른 무언가를 반환할 수 있는 메서드
+  - reduceer 콜백 함수를 실행하고, 이를 초기값에 누적해 결과를 반환하는
+- forEach
+  - 콜백 함수를 받아 순회하면서 단순히 그 콜백 함수를 실행시키기만 하는 메서드
+  - 실행되는 순간 에러를 던지거나 프로세스를 종료하지 않는 이상 멈출 수가 없다(break, return 사용해도 소용 없음)
+
+5. 삼항 조건 연산자
+
+- 자바스크립트에서 유일하게 3개의 피 연산자를 취할 수 있는 문법
+- 리액트에서 컴포넌트 렌더링 시 자주 사용된다.
+
+```
+const value = 10
+const result = value % 2 === 0 ? '짝수' : '홀수'
+// 짝수
+```
+
+### 선택이 아닌 필수, 타입스크립트
+
+1. 타입스크립트란
+
+- 기존 자바스크립트 문법에 타입을 가미한 것을
+
+2. 리액트 코드를 효과적으로 작성하기 위한 타입스크립트 활용법
+
+- any 대신 unknown을 사용하자
+  - unknown은 모든 값을 할당할 수 있는 이른바 top type으로 어떠한 값도 할당할 수 없다.
+  - any와 다르게, 이 값을 바로 사용하는 것은 불가능하다.
+- bottom type으로 never가 있다.
+  - unknown과 반대로, 어떠한 타입도 들어올 수 없음을 의미한다.
+- 타입 가드를 적극 활용하자
+  - instanced와 typeof
+  - in
+- 제네릭
+  - 단일 타입이 아닌 다양한 타입에 대응할 수 있도록 도와주는 도구
+- 인덱스 시그니처
+  - 객체의 키를 정의하는 방식
+  - keyof: 특정 객체에서 사용되는 키들을 추출하는 타입 연산자
+  - [key: string] or Record 사용
+
+3. 타입스크립트 전환 가이드
+
+- tsconfig.json 작성하기
+- JSDoc과 @ts-check를 활용해 점진적으로 전환하기
+- 타입 기반 라이브러리 사용을 위해 @types 모듈 설치하기
+- 파일 단위로 조금씩 전환하기
