--- a/jiyoung/chap1.mdx
+++ b/jiyoung/chap1.mdx
@@ -714,7 +714,7 @@ function Component() {
 
 #### 인덱스 시그니처
 
-- 인덱스 시그니처는 객체의 인덱스에 대한 타입을 정의하는 방법이다.
+- 인덱스 시그니처는 객체의 키를 정의하는 방식을 의미한다.
 - 객체의 키와 값의 타입을 정의할 수 있다.
   ```
   interface Student{
@@ -726,3 +726,22 @@ function Component() {
   }
   ```
 - 인덱스 시그니처는 객체의 키와 값의 타입을 정의할 수 있으므로, 동적인 키와 값의 타입을 가진 객체를 정의할 때 유용하다.
+- 존재하지 않는 키로 접근하면 undefined를 반환하기 때문에 주의해야 한다.
+  - record 사용
+    ```bash
+    type Hello = Record<'hello' | 'hi', string>
+    const hello: Hello = {
+      hello: 'hello',
+      hi: 'hi',
+    }
+    ```
+  - type을 사용한 인덱스 시그니처
+    ```bash
+    type Hello = {
+      [key in 'hello' | 'hi']: string
+    }
+    const hello: Hello = {
+      hello: 'hello',
+      hi: 'hi',
+    }
+    ```
