--- a/seokhyun/chap1.mdx
+++ b/seokhyun/chap1.mdx
@@ -263,13 +263,16 @@ get firstCharacter(){
 - 인스턴스 메서드와 정적 메서드
 
   - 인스턴스 메서드 : 인스턴스를 통해 호출하는 메서드
+
     - 프로토타입 확인하기
+
     ```
     object.getPrototypeOf(myCar)=== Car.prototype // Car
 
     myCar.__proto__ === Car.prototype // true
     ```
-    - __proto__는 호환성을 유지하기위해서만 존재 사용하지않는것이 바람직함.
+
+    - **proto**는 호환성을 유지하기위해서만 존재 사용하지않는것이 바람직함.
 
   - 정적 메서드 : 클래스를 통해 호출하는 메서드
     - 인스턴스를 통해 호출할 수 없다.
@@ -280,6 +283,7 @@ get firstCharacter(){
     - 유틸리티 함수를 만들때 자주 활용된다.
 
 - 클래스 상속
+
   - 클래스 상속은 부모 클래스의 프로퍼티와 메서드를 자식 클래스에서 사용할 수 있게 해준다.
   - extends 키워드를 사용하여 상속을 구현한다.
   - super 키워드를 사용하여 부모 클래스의 생성자를 호출한다.
@@ -287,5 +291,145 @@ get firstCharacter(){
   - 자식 클래스에서 constructor를 구현할 때 super를 호출하지 않으면 에러가 발생한다.
 
 - 클래스는 ES6에서 등장한 개념이다.
+
   - ES6이전에는 프로토타입을 활용해 클래스의 작동 방식을 동일하게 구현했다.
+
+- 클로저
+
+  - 함수와 함수가 선언된 어휘적 환경의 조합
+  - 함수가 생성될 당시의 외부 변수를 기억한다.
+  - 외부 변수를 기억하고 이 외부 변수에 접근할 수 있는 함수를 클로저라고 한다.
+  - 클로저는 함수를 값으로 다루는 자바스크립트의 고유한 특징을 가진다.
+  - 코드가 작성된 순간에 정적으로 결정된다.
+
+  - 스코프
+    - 전역 스코프 : 코드의 모든 범위에서 접근 가능하다
+    - 함수 스코프 : 함수 내부에서만 접근 가능하다
+
+- 클로저의 활용
+
+  - 함수형 프로그래밍
+  - 정보은닉 // 함수의 내부에 있기에 가능
+
+- 리액트에서의 클로저
+
+  - 리액트에서는 클로저를 활용해 상태값을 안전하게 보호한다.
+  - 리액트에서는 클로저를 활용해 이벤트 핸들러를 안전하게 보호한다.
+
+- 클로저의 메모리 누수
+
+  - 클로저는 외부 변수를 기억하므로 메모리 누수가 발생할 수 있다.
+  - 클로저가 참조하는 외부 변수가 필요하지 않다면 null로 초기화하여 메모리 누수를 방지한다.
+
+- 이벤트 루프 와 비동기 통신
+
+  - 자바스크립트는 단일 스레드 기반의 언어이다.
+  - 이벤트 루프는 자바스크립트의 비동기 처리 방식을 담당한다. // useEffect, setTimeout, setInterval
+  - 이벤트 루프는 콜 스택과 태스크 큐를 사용해 비동기 처리를 구현한다.
+  - 콜 스택은 함수 호출을 기록하는 자료구조이다.
+  - 이벤트 루프는 콜 스택과 태스크 큐를 모니터링하며 콜 스택이 비어있을 때 태스크 큐의 함수를 콜 스택으로 이동시킨다.
+  - 태스크 큐는 비동기 처리 함수의 콜백 함수를 대기시키는 자료구조이다.
+
+- 태스크 큐와 마이크로태스크 큐
+
+  - 태스크 큐는 콜 스택에 들어갈 함수를 대기시키는 자료구조이다.
+  - 마이크로태스크 큐는 프로미스의 콜백 함수를 대기시키는 자료구조이다.
+  - 마이크로태스크 큐의 우선순위가 더 높다.
+  - 브라우저 렌터링은 마이크로태스크 큐와 테스크 큐 사이에서 발생한다.
+
+- 구조 분해 할당
+
+  - 객체나 배열을 분해하여 변수에 할당하는 것
+  - 객체 구조 분해 할당
+  - 배열 구조 분해 할당
+
+    - 배열 구조 분해 할당은 순서대로 할당된다.
+    - 객체 구조 분해 할당은 객체에서 값을 추출하여 변수에 할당한다.
+
+  - 특정값 이후의 값을 배열로 받아오고 싶을때 ...rest를 사용한다. 스프레드 연산자를 앞에 사용하는것은 불가능하다.
+
+- 스프레드 연산자
+
+  - 배열의 전개 구문
+
+  ```
+  const arr = [1,2,3]
+  const newArr = [...arr, 4,5,6]
+  console.log(newArr) // [1,2,3,4,5,6]
+  ```
+
+  - 객체의 전개 구문
+
+  ```
+  const obj = {a:1, b:2}
+  const newObj = {...obj, c:3, d:4}
+  console.log(newObj) // {a:1, b:2, c:3, d:4}
+  ```
+
+- 전개구문 이후에 값이 있다면 뒤에있는 값이 덮어씌워진다.
+- 전개구문 이전에 값이 있다면 전개구문이 해당값을 덮어쓴다
+
+- 객체 초기자
+
+  - 객체의 프로퍼티 이름과 값이 동일한 경우 프로퍼티 이름을 생략할 수 있다.
+  - 객체 초기자를 사용하면 코드의 가독성이 높아진다.
+
+  ```
+  const a = 1
+  const b = 2
+
+  const ab = {a,b}
+  console.log(ab) // {a:1, b:2}
+  ```
+
+- Array 프로토타입 메서드
+
+  - Array.prototype.map()
+    - 배열의 모든 요소에 대해 주어진 함수를 호출한 결과를 모아 새로운 배열을 반환한다.
+    - 배열의 요소를 변형할 때 사용한다.
+  - Array.prototype.filter()
+    - 주어진 함수의 테스트를 통과하는 모든 요소를 모아 새로운 배열로 반환한다.
+    - 배열의 요소를 걸러낼 때 사용한다.
+    - 결과값 배열의 길이가 원본 배열의 길이 이하일 수 있다.
+  - Array.prototype.reduce()
+    - 배열의 각 요소에 대해 주어진 리듀서 함수를 실행하고 하나의 결과값을 반환한다.
+    - 배열의 요소를 하나로 줄일 때 사용한다.
+    ```
+    const arr = [1,2,3,4,5]
+    const sum = arr.reduce((acc, cur)=>acc+cur, 0) <- 0은 초기값
+    // acc는 초기값의 현재값, 현재 배열의 요소
+    console.log(sum) // 15
+    ```
+    - reduce는 초기값을 설정하지 않으면 배열의 첫번째 요소가 초기값이 된다.
+    - reduce로 map 과 filter를 구현할 수 있지만 다소 코드가 복잡해지기 때문에 간단한 경우에만 사용하는것이 좋다.
+  - Array.prototype.forEach()
+    - 배열의 각 요소에 대해 주어진 함수를 실행한다.
+    - 반환값이 없다.
+    - 배열의 요소를 순회할 때 사용한다.
+    - 프로세스를 종료하거나 에러를 던지지 않는이상 중단이 불가능하다.
+    
+- 삼항 조건 연산자
+  
+    - 조건식 ? 참일때 반환값 : 거짓일때 반환값
+    - if문 대신 간단하게 사용하기 좋다
+    - 중첩해서 사용하는것은 지양하는것이 좋다.
+
+- TypeScript
+
+  - 런타임에만 타입체크를 할 수 있는 한계를 극복해 안정성 확보와 버그를 줄이기 위해 사용한다.
+  - 정적 타입 언어이다.
+  - any 타입을 사용하면 타입스크립트의 장점을 활용할 수 없다.
+  - unknown 타입은 any 타입과 달리 타입을 확정할 때까지 다른 타입으로 할당할 수 없다.
+  - unknown은 top type이다.
+  - never 타입은 절대 발생하지 않는 값의 타입을 나타낸다.
+  - never 은 bottom type이다.
+  
+- 타입 가드
+  - instanceof 와 typeof
+  - 타입 가드를 사용하면 타입을 확정할 수 있다.
+  - instanceof는 지정한 인스턴스가 특정 클래스의 인스턴스인지 확인한다.
+  - typeof는 변수의 타입을 확인한다.
+  - in은 객체의 프로퍼티가 존재하는지 확인한다.
+    - in을 활용해 타입에 여러가지 객체가 존재하는 경우를 대응할 수 있다.
+  
 
