--- a/seokhyun/chap1.mdx
+++ b/seokhyun/chap1.mdx
@@ -432,4 +432,31 @@ get firstCharacter(){
   - in은 객체의 프로퍼티가 존재하는지 확인한다.
     - in을 활용해 타입에 여러가지 객체가 존재하는 경우를 대응할 수 있다.
   
+- 제네릭
+  - 타입을 인수로 받아서 사용하는 함수나 클래스를 의미한다.
+  - 함수나 클래스를 작성할 때 타입을 명시하지 않고 사용할 때 사용한다.
+  - 제네릭을 사용하면 재사용성이 높아진다.
+  - 제네릭을 사용하면 타입을 명시하지 않아도 타입을 추론할 수 있다.
 
+- 인덱스 시그니처
+  - 인덱스 시그니처를 사용하면 키에 원하는 타입을 부여할 수 있다.
+    - 객체의 키는 동적으로 선언되는것을 지양
+    - 객체의 타입도 범위를 좁여햐 한다.
+
+- 타입 단언
+  - 타입 단언을 사용하면 타입스크립트에게 해당 값의 타입을 강제할 수 있다.
+  - 타입 단언은 타입스크립트에게 해당 값의 타입을 확신할 때 사용한다.
+  - 타입 단언은 타입스크립트의 타입 추론을 무시한다.
+  - 타입 단언은 any 타입을 사용하는것과 유사하다.
+  - 타입 단언은 타입스크립트의 타입 추론을 무시한다.  
+
+- duck typing
+
+  - 타입체크를 할때 그 값이 가진 형태에 집중
+
+- 타입스크립트 전환 가이드
+
+  - tsconfig.json 파일을 생성한다.
+  - jsdoc @ ts-check을 사용해 타입스크립트의 타입 추론을 활용한다.
+  - type 모듈 설치하기
+  - 파일 단위로 조금씩 전환하기
