--- a/seokhyun/chap2.mdx
+++ b/seokhyun/chap2.mdx
@@ -1,15 +1,63 @@
 ---
 title: 02장 정리
-date: '2024/03/29'
-description: 리액트 개발을 위해 꼭 알아야 할 자바스크립트
+date: '2024/04/11'
+description: 리액트 핵심 요소 깊게 살펴보기 - 리액트 파이버
 ---
 
-markdown 형식을 지켜서 여기에 작성해주시면 됩니다.
+# 리액트 파이버
+
+- 리액트 파이버란?
+  - 리액트에서 관리하는 자바스크립트 객체
+  - 파이버 재조정자(fiber reconciler)가 관리한다.
+  - 가상 dom과 실제 dom사이의 차이점을 기반으로 재조정 한다.
+  - 효율적으로 업데이트 가능
+  - 비동기적으로 일어남
+  - 가급적 재사용된다.
+  - 우선순위 기반 스케줄링
+    - 싱글스레드의 특성상 동기적 작업은 중단될 수 없다,
+    - 파이버는 비동기 이기때문에 중단시키기 가능하다
+    - 다만 커밋되는 동안에는 동기적이기 때문에 중단이 불가하다
 
 ```
-export function myComponent(){
-    return (
-        <p>code space</p>
-    )
+var createFiber = function(tag, pendingProps, key, mode) {
+    return new FiberNode(tag, pendingProps, key, mode)
 }
 ```
+
+- tag : element당 1:1로 생성되는데 이에대한 정보를 가지고 있음
+- stateNode : 파이버 자체에 대한 참조 정보를 가지고있다.
+- child, sibiling, return : 파이버 간의 관계 개념을 나타내는 속성이다.
+
+  - 파이버도 트리 혁식을 갖게 되는데 트리를 구성하는데 필요한 정보가 정의된다
+
+- 파이버 트리
+  - current tree
+  - WorkInProgress tree
+  1. 업데이트 발생시 workinprogress 트리를 빌드
+  2. 완료시 다음 렌더링에 사용
+  3. current -> WorkInProgress 로 변경됨.
+
+```
+<A1>
+    <B1>안녕하세요</B1>
+    <B2>
+        <C1>
+            <D1 />
+            <D2 />
+        </C1>
+    </B2>
+    <B3 />
+</A1>
+
+A1-> B1 -> O -> B2 -> C1 -> D1 ->O ->D2 -> O -> C1 -> O -> B2 -> O -> B3 -> O -> A1 ->O
+짧은 코드에서도 트리 업데이트에 이렇게 많은 과정이 있다.
+
+```
+- 파이버는 가급적 새로운 파이버를 생성하기 보단, 기존의 파이버에서 업데이트된 
+    props를 받아 파이버 내부에서 처리한다.
+- 여러 작업을 메모리상에서 먼저 수행해서 최종적인 결과물만 실제 브라우저 dom에서 적용한다.
+- 파이버와 가상 dom 이 비슷해보지만 같은것은 아니다.
+- 가상dom과 파이버는 단순히 브라우저에 dom을 변경하는 작업보다 빨라서 만들어진것이 아니다. 
+- dom을 수동으로 조작해야할 경우 어디서 어떤 값이 들어와서 변경되는지 ,
+    프로젝트 규모가 커질수록 개발자가 확인하기 힘들어짐으로 파이버 내의 
+    로직으로 자동적으로 처리할수 있게 하여 유지보수가 용이하게 되는것이다. 
