--- a/seokhyun/chap2.mdx
+++ b/seokhyun/chap2.mdx
@@ -60,4 +60,5 @@ A1-> B1 -> O -> B2 -> C1 -> D1 ->O ->D2 -> O -> C1 -> O -> B2 -> O -> B3 -> O ->
 - 가상dom과 파이버는 단순히 브라우저에 dom을 변경하는 작업보다 빨라서 만들어진것이 아니다. 
 - dom을 수동으로 조작해야할 경우 어디서 어떤 값이 들어와서 변경되는지 ,
     프로젝트 규모가 커질수록 개발자가 확인하기 힘들어짐으로 파이버 내의 
-    로직으로 자동적으로 처리할수 있게 하여 유지보수가 용이하게 되는것이다. 
+    로직으로 자동적으로 처리할수 있게 하여 유지보수가 용이하게 되는것이다.
+- 흐름을 효율적으로 관리하기 위한 매커니즘이 리액트의 핵심적인 요소이다.
