--- a/jiyoung/chap2.mdx
+++ b/jiyoung/chap2.mdx
@@ -47,28 +47,28 @@ description: 리액트 핵심요소 깊게 살펴보기
 
 - 앞서 말한 요소를 조합하면 모두 유효한 JSX 구조를 띄게 된다.
 
-```bash
-// 사용되는 경우는 없지만 유효한 문법들
-cosnt ComponentA = () => {
-  return <A.B></A.B>;
-}
+  ```bash
+  // 사용되는 경우는 없지만 유효한 문법들
+  cosnt ComponentA = () => {
+    return <A.B></A.B>;
+  }
 
-const ComponentB = () => {
-  return <A.B.C></A.B.C>;
-}
+  const ComponentB = () => {
+    return <A.B.C></A.B.C>;
+  }
 
-const ComponentC = () => {
-  return <A:B.C></A:B.C>;
-}
+  const ComponentC = () => {
+    return <A:B.C></A:B.C>;
+  }
 
-const ComponentD = () => {
-  return <$></$>;
-}
+  const ComponentD = () => {
+    return <$></$>;
+  }
 
-const ComponentE = () => {
-  return <_></_>;
-}
-```
+  const ComponentE = () => {
+    return <_></_>;
+  }
+  ```
 
 ### JSX는 어떻게 자바스크립트에서 변환될까?
 
@@ -352,3 +352,54 @@ function D() {
 - **현실적으로 최적화나 성능 향상에 쏟을 시간이 적다.**
 - 일단 memo로 감싼 뒤에 생각해보는 것이 더 나을 수 있다.
 - 지불해야하는 비용의 경우, 리액트의 기본적인 알고리즘으로 이전 결과물은 저장되어 있기 때문에 우리가 memo로 지불해야 하는 비용은 props에 대한 얕은 비교 뿐이다.
+
+---
+
+## More About React fiber
+
+- 우리가 `<div>` 라는 태그를 쓰던, `<Div>`라는 이는 모두 단순한 객체라는것이 핵심
+- **결국 화면에 어떻게 렌더링을 해야 하는지에 대한 설명들일 뿐이다**
+- 객체로 구성한 뒤에 Tree를 구축 하고 파싱을 해서 "어떤 부분을 수정해야 하는구나" 판단이 된 뒤에야 실제 렌더링이 일어나게 된다
+
+- Fiber에 Reconcilation을 처리하기 위해 존재하는 Fiber Tree의 경우 Stack Reconcilation을 할 때 처럼 Tree가 recursion으로 구현된 것이 아닌, LinkedList로 구현되어 있다
+  - 정확히는 LCRS트리라고 불리며, Left Children Right Sibiling의 약자이다
+- Fiber Tree를 구성하는 LCRS트리의 각각의 노드들에는 Type, key, child, sibiling, memoized같이 각 컴포넌트에 대한 정보들이 들어가있다.
+
+- fiber 아키텍처의 모든 fiber 노드들은 모두 `workLoop()`라는 함수에서 동작한다.
+- callStack에 올라가 있는 workLoop Execution Context에 JS로 스케줄링 알고리즘과 call stack이 구현되어 관리된다
+
+### workInProgress
+
+- fiber들이 작업에 들어가게 되는 tree이다.
+- fiber node들은 자바스크립트 객체들이라서 Commit단계가 수행되기 전까지 비동기적으로 계속 변동 가능
+
+### performUnitOfWork
+
+- workInProgress 트리에서 fiber 노드를 수신하고 beginWork 함수를 호출하여 작업을 시작하는 함수
+
+### beginWork
+
+- 컴포넌트들을 스택에 쌓아올리는 함수
+
+### completeUnitOfWork
+
+- workInProgress 트리의 노드에서 자식 노드가 없을 경우 사용되는 메서드
+- 작업을 한 뒤 형제 노드가 있을 경우 형제 노드로부터 다시 작업이 시작된다
+
+  ![completeUnitOfWork](/assets/jiyoung/completeUnitOfWork.png)
+
+### completeWork
+
+- 작업이 끝났다는 걸 확정하는 함수
+- 변경점이 있다면 EffectList에 담겨 한번에 실제 DOM에 반영한다
+
+### React lifecycle
+
+- **render phase**
+  - VDOM 재조정하는 단계
+    - element 추가, 수정, 삭제 ⇒ work를 scheduler에 등록
+      - work: reconciler가 컴포넌트의 변경을 DOM에 적용하기 위해 수행하는 일
+      - reconciler가 fiber로 바뀌면서 렌더링 우선순위 변경이 가능해졌다
+- **commit phase**
+  - 재조정한 VDOM을 DOM에 적용 & 라이프사이클 실행하는 단계
+  - DOM 조작 일괄처리 후, 리액트가 콜스택을 비워준 다음 브라우저가 paint 시작
