--- a/minhyung/chap2.mdx
+++ b/minhyung/chap2.mdx
@@ -183,7 +183,8 @@ function Hello() {
   - 이 과정엣 비교하는 것은 크게 세가지로, type, props, key(이 세가지 중 하나라도 변경된 것이 있으면 변경이 필요한 컴포넌트로 체크해둔다.)
 - 커밋 단계: 렌더 단계의 변경 사항을 실제 DOM에 적용해 사용자에게 보여주는 과정
   - 해당 단계야 끝나야 비로소 브라우저의 렌더링이 발생한다.
-  - 리액트가 먼저 DOM을 커밋 단계에서 업데이트한다면 이렇게 만들어진 모든 DOM 노드 및 인스턴스를 가리키도록 리액트 내부의 참조를 업데이트한다.
+  - 리액트가 먼저 실제 DOM을 커밋 단계에서 업데이트
+  - 이렇게 만들어진 모든 실제 DOM의 노드 및 인스턴스를 가리키도록 리액트 내부의 참조를 업데이트한다.
   - 그다음, 생명주기 개념이 있는 클래스 컴포넌트에서는 componentDidMount, componentDidUpdate 메서드를 호출하고, 함수 컴포넌트에서는 useLayoutEffect 훅을 호출한다.
 - 중요한 사실을 리액트의 렌더링이 일어난다고 해서 무조건 DOM 업데이트가 일어나는 것은 아니라는 것
   - 렌더링을 수행했으나 커밋 단계까지 갈 필요가 없다면, 즉 변경 사항을 계산했는데 아무런 변경 사항이 감지되지 않는다면 이 커밋 단계는 생략 가능
